--- a/style.css
+++ b/style.css
@@ -1,19 +1,128 @@
 /* nejsme vcerejsi, pouzivame moderni a intuitivni box model */
-html { box-sizing: border-box; }
-*, ::after, ::before { box-sizing: inherit; }
-
-/*
- BARVY
- czechitas  #b92e81
- pozadi     #bdc3c7
- tmava      #31363b
- delitka    #3f464d
- portfolio  #e74c3c
- facebook   #3b5998
- twitter    #1da1f2
-*/
-
-
-body {
+html {
+    box-sizing: border-box;
+  }
+  *,
+  ::after,
+  ::before {
+    box-sizing: inherit;
+  }
+  
+  /*
+   BARVY
+   czechitas  #b92e81
+   pozadi     #bdc3c7
+   tmava      #31363b
+   delitka    #3f464d
+   portfolio  #e74c3c
+   facebook   #3b5998
+   twitter    #1da1f2
+  */
+  
+  body {
     background-color: #bdc3c7;
-}
+    width: 250px;
+  }
+  
+  .hlavicka {
+    width: 250px;
+  }
+  
+  .foto {
+    width: 250px;
+  }
+  
+  .logo {
+    background-color: #b92e81;
+    border-radius: 50%;
+    position: absolute;
+    left: 200px;
+    top: 150px;
+  }
+  
+  .obsah {
+    background-color: #31363b;
+    margin-bottom: -1rem;
+  }
+  
+  h1 {
+    color: white;
+    font-family: "Montserrat", sans-serif;
+    text-align: block;
+    margin-top: -1rem;
+    padding: 1rem;
+  }
+  
+  p {
+    color: #bdc3c7;
+    text-align: block;
+    font-family: "Source Sans Pro", sans-serif;
+    padding: 1rem;
+  }
+  
+  .container {
+    background-color: #31363b;
+  }
+  
+  .odkazy {
+    font-family: "Montserrat", sans-serif;
+    list-style: none;
+    padding-left: 0;
+    font-size: 0;
+    text-align: center;
+  }
+  
+  .odkazy li {
+    display: inline-block;
+    font-size: 1rem;
+    box-shadow: 0.1rem 0rem 0.1rem #959595;
+  }
+  
+  .odkazy a {
+    display: block;
+    padding: 1rem;
+    color: #bdc3c7;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+  
+  .facebook,
+  .twitter {
+    width: 50%;
+  }
+  
+  
+  .menu a {
+    display: block;
+    color: white;
+    text-decoration: none;
+    padding: 0.5rem;
+  }
+  
+  .portfolio a:hover {
+    background-color: #e74c3c;
+  }
+  
+  .facebook a:hover {
+    background-color: #3b5998;
+  }
+  
+  .twitter a:hover {
+    background-color: #1da1f2;
+  }
+  
+  .portfolio {
+    position: relative;
+    width: 100%;
+  }
+  
+  .facebook {
+    position: relative;
+  }
+  
+  .twitter {
+    position: arelative;
+    left: 170px;
+    top: 650px;
+  }
+  
